--- a/css/mini_footer.css
+++ b/css/mini_footer.css
@@ -37,7 +37,8 @@
       float: left;
       position: relative;
       width: 50%;
-      height: 32px; }
+      height: 32px;
+      cursor: pointer; }
       .mini_footer_act_serch_input {
         width: 100%;
         height: 21px;
@@ -77,7 +78,11 @@
       text-align: left;
       max-width: 180px;
       font: 15px/20px Verdana;
-      font-weight: bold; }
+      font-weight: bold;
+      pointer-events: none; }
+      @media (max-width: 770px) {
+        .mini_footer_act .ring {
+          pointer-events: au; } }
       .mini_footer_act .ring p {
         font: 13px/20px Verdana;
         font-weight: normal;
@@ -115,6 +120,50 @@
         width: 100%;
         max-width: 156px;
         height: 100%; }
+  .mini_footer .all_brend {
+    float: left;
+    width: 100%;
+    display: none; }
+    .mini_footer .all_brend .link {
+      float: left;
+      width: 50%;
+      font: 14px/43px Verdana;
+      font-weight: bold;
+      text-decoration: underline;
+      color: #024753;
+      box-sizing: border-box;
+      padding-left: 13px;
+      border: 1px solid #797979;
+      height: 43px; }
+      .mini_footer .all_brend .link:hover {
+        background: #faf3da;
+        color: #620909; }
+      .mini_footer .all_brend .link:nth-child(odd) {
+        border-right: none; }
+    .mini_footer .all_brend .close_block {
+      float: left;
+      width: 100%;
+      border: 1px solid #840000;
+      background: #faf3da;
+      box-sizing: border-box;
+      border-top: none;
+      padding: 12px 11px; }
+      .mini_footer .all_brend .close_block a {
+        border: 2px solid #002d2d;
+        width: 100%;
+        margin-bottom: 0px;
+        display: block;
+        background: #bfdfea;
+        text-align: center;
+        float: left;
+        min-height: 51px;
+        box-sizing: border-box;
+        font-size: 18px;
+        color: #003c95;
+        font: 14px/51px Verdana;
+        font-weight: normal;
+        font-weight: bold;
+        text-decoration: underline; }
   .mini_footer_brends {
     float: left;
     width: 100%;
@@ -269,18 +318,7 @@
     width: 100%;
     margin-top: 10px;
     background: #f2f2f2; }
-    .mini_footer_actions_zag {
-      float: left;
-      width: 100%;
-      font: 15px/36px Verdana;
-      font-weight: bold;
-      background: #840000;
-      border: 3px solid #000000;
-      color: #ffffff;
-      box-sizing: border-box;
-      text-align: center;
-      margin-bottom: 31px; }
-    .mini_footer_actions a {
+    .mini_footer_actions .link {
       width: 43%;
       float: left;
       text-align: center;
@@ -290,8 +328,25 @@
       border: 1px solid #014366;
       text-decoration: underline;
       background: #ffffff; }
-      .mini_footer_actions a:nth-child(even) {
+      .mini_footer_actions .link:hover {
+        color: #620909;
+        border-color: #620909; }
+      .mini_footer_actions .link:nth-child(even) {
         float: right; }
+    .mini_footer_actions_zag {
+      float: left;
+      width: 100% !important;
+      font: 15px/36px Verdana;
+      font-weight: bold;
+      background: #840000;
+      border: 3px solid #000000;
+      color: #ffffff;
+      box-sizing: border-box;
+      text-align: center;
+      margin-bottom: 31px; }
+      .mini_footer_actions_zag:hover {
+        border-color: #003c95;
+        color: #000000; }
     .mini_footer_actions .answer {
       width: 100%;
       margin-top: 29px; }
@@ -307,7 +362,8 @@
         color: #014366;
         border: 1px solid #ff0000;
         text-decoration: underline;
-        background: #ffffff; }
+        background: #ffffff;
+        min-height: 81px; }
         .mini_footer_actions_prise .payment p {
           width: 100%;
           margin: 18.5px 0px;
@@ -319,6 +375,8 @@
       border: 1px solid #024753;
       padding: 0px 6px;
       box-sizing: border-box; }
+      .mini_footer_actions .bascet:hover {
+        outline: 2px solid #620909; }
       .mini_footer_actions .bascet h5 {
         float: left;
         width: 100%;
@@ -373,5 +431,7 @@
       color: #ffffff;
       font-weight: bold;
       text-decoration: underline; }
+      .mini_footer .black_link a:hover {
+        color: #003c95; }
       .mini_footer .black_link a:nth-child(even) {
         float: right; }
