--- a/css/style.css
+++ b/css/style.css
@@ -1421,6 +1421,109 @@ table {
 /**/
 /**********************************************************************************************************************/
 /***********************************************************************************************************************/
+.garant_block {
+  position: absolute;
+  width: 100%;
+  max-width: 1160px;
+  height: 637px;
+  background: #ffffff;
+  z-index: 99;
+  left: 0px;
+  top: 40px; }
+  .garant_block_header {
+    float: left;
+    width: 100%;
+    min-height: 103px;
+    background: #ffffaa;
+    border: 1px solid #ffffff;
+    box-sizing: border-box; }
+    .garant_block_header .icon {
+      display: inline-block;
+      float: left;
+      width: 110px;
+      height: 135px;
+      background-image: url("../img/temp_sprite/garant_icon.png");
+      background-position: center;
+      margin-left: 27.5px;
+      margin-top: -30px;
+      margin-right: 22.8px; }
+    .garant_block_header h3 {
+      float: left;
+      font: 26px/103px 'Roboto-Medium'; }
+      .garant_block_header h3 span {
+        text-transform: uppercase; }
+        .garant_block_header h3 span i {
+          color: #f80b0b; }
+  .garant_block .close {
+    display: block;
+    position: absolute;
+    top: -16.5px;
+    right: -16.5px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center; }
+    @media (max-width: 1160px) {
+      .garant_block .close {
+        right: 10px;
+        top: 10px;
+        border: 1px solid #620909; } }
+    .garant_block .close i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px; }
+  .garant_block_section {
+    float: left;
+    width: 100%;
+    padding: 29px 30px;
+    box-sizing: border-box;
+    padding-right: 15px; }
+    .garant_block_section_img {
+      float: left;
+      width: 29%; }
+      .garant_block_section_img img {
+        max-width: 100%; }
+    .garant_block_section_text {
+      float: left;
+      height: 475px;
+      width: 71%;
+      padding-left: 30px;
+      box-sizing: border-box; }
+      .garant_block_section_text h2 {
+        width: 100%;
+        font: 16px/41px Verdana;
+        font-weight: bold;
+        color: #074e23;
+        text-shadow: -1px 3px 5px rgba(75, 75, 75, 0.52);
+        text-align: center; }
+      .garant_block_section_text h3 {
+        width: 100%;
+        text-align: center;
+        border: 1px solid #024753;
+        background: #f2f2f2;
+        font: 16px/81px Verdana;
+        font-weight: bold;
+        color: #1b1b1b;
+        box-sizing: border-box;
+        margin: 20px 0px; }
+        .garant_block_section_text h3 span {
+          color: #b80000;
+          font-weight: bold; }
+      .garant_block_section_text p {
+        width: 100%;
+        font: 14px/22px 'robotoregular';
+        padding-right: 10px;
+        box-sizing: border-box; }
+        .garant_block_section_text p span {
+          color: #b80000;
+          font-weight: bold; }
+
 /******************Стили модальных окон без тёмного фона начало**************************************/
 .big_text {
   position: absolute;
@@ -2040,6 +2143,11 @@ table {
     -webkit-border-radius: 50%;
     background: #FFFFFF;
     text-align: center; }
+    @media (max-width: 1175px) {
+      .multi_block .close {
+        top: 10px;
+        right: 10px;
+        border: 1px solid #620909; } }
     .multi_block .close i {
       display: inline-block;
       width: 15px;
@@ -2411,6 +2519,11 @@ table {
     -webkit-border-radius: 50%;
     background: #FFFFFF;
     text-align: center; }
+    @media (max-width: 1175px) {
+      .question_block .close {
+        top: 10px;
+        right: 10px;
+        border: 1px solid #620909; } }
     .question_block .close i {
       display: inline-block;
       width: 15px;
@@ -2810,6 +2923,11 @@ table {
     -webkit-border-radius: 50%;
     background: #FFFFFF;
     text-align: center; }
+    @media (max-width: 1029px) {
+      .thenk_block .close {
+        top: 10px;
+        right: 10px;
+        border: 1px solid #620909; } }
     .thenk_block .close i {
       display: inline-block;
       width: 15px;
@@ -5583,6 +5701,11 @@ table {
     -webkit-border-radius: 50%;
     background: #FFFFFF;
     text-align: center; }
+    @media (max-width: 920px) {
+      .serch_modal .close {
+        top: 10px;
+        right: 10px;
+        border: 1px solid #620909; } }
     .serch_modal .close i {
       display: inline-block;
       width: 15px;
@@ -5762,6 +5885,11 @@ table {
     background: #FFFFFF;
     text-align: center;
     z-index: 999; }
+    @media (max-width: 1083px) {
+      .schem_big_block .scheme_close, .schem_big_block .map_close {
+        top: 10px;
+        right: 10px;
+        border: 1px solid #620909; } }
     .schem_big_block .scheme_close i, .schem_big_block .map_close i {
       display: inline-block;
       width: 15px;
@@ -6828,13 +6956,20 @@ table {
             .section_product_wrap__manufactures__factory_block__brend_text .description {
               width: 100%;
               font: 12px/18px Verdana;
-              color: #212121; }
+              color: #212121;
+              text-align: left; }
+              @media (max-width: 768px) {
+                .section_product_wrap__manufactures__factory_block__brend_text .description {
+                  margin-bottom: 10px; } }
               .section_product_wrap__manufactures__factory_block__brend_text .description .read_m {
                 display: inline-block;
                 width: 100%;
                 text-align: right;
                 font-size: 10px;
                 color: #82000c; }
+                @media (max-width: 768px) {
+                  .section_product_wrap__manufactures__factory_block__brend_text .description .read_m {
+                    display: none; } }
                 .section_product_wrap__manufactures__factory_block__brend_text .description .read_m:hover {
                   color: #25613c; }
             .section_product_wrap__manufactures__factory_block__brend_text .adres {
@@ -7630,6 +7765,19 @@ table {
                 left: -20px;
                 top: 50%;
                 margin-top: -10px; }
+              @media (max-width: 1128px) {
+                .footer_info__section_tel_form_block .input_wrap .popup-left-corner {
+                  top: 40px;
+                  left: 0px;
+                  z-index: 99; }
+                  .footer_info__section_tel_form_block .input_wrap .popup-left-corner:before {
+                    content: '';
+                    position: absolute;
+                    border-left: 10px solid transparent;
+                    border-right: 10px solid transparent;
+                    border-bottom: 10px solid #fc0000;
+                    left: 20px;
+                    top: -10px; } }
           .footer_info__section_tel_form_block .submit {
             display: block;
             width: 100%;
@@ -7806,7 +7954,8 @@ table {
       float: left;
       position: relative;
       width: 50%;
-      height: 32px; }
+      height: 32px;
+      cursor: pointer; }
       .mini_footer_act_serch_input {
         width: 100%;
         height: 21px;
@@ -7846,7 +7995,11 @@ table {
       text-align: left;
       max-width: 180px;
       font: 15px/20px Verdana;
-      font-weight: bold; }
+      font-weight: bold;
+      pointer-events: none; }
+      @media (max-width: 770px) {
+        .mini_footer_act .ring {
+          pointer-events: au; } }
       .mini_footer_act .ring p {
         font: 13px/20px Verdana;
         font-weight: normal;
@@ -7884,6 +8037,50 @@ table {
         width: 100%;
         max-width: 156px;
         height: 100%; }
+  .mini_footer .all_brend {
+    float: left;
+    width: 100%;
+    display: none; }
+    .mini_footer .all_brend .link {
+      float: left;
+      width: 50%;
+      font: 14px/43px Verdana;
+      font-weight: bold;
+      text-decoration: underline;
+      color: #024753;
+      box-sizing: border-box;
+      padding-left: 13px;
+      border: 1px solid #797979;
+      height: 43px; }
+      .mini_footer .all_brend .link:hover {
+        background: #faf3da;
+        color: #620909; }
+      .mini_footer .all_brend .link:nth-child(odd) {
+        border-right: none; }
+    .mini_footer .all_brend .close_block {
+      float: left;
+      width: 100%;
+      border: 1px solid #840000;
+      background: #faf3da;
+      box-sizing: border-box;
+      border-top: none;
+      padding: 12px 11px; }
+      .mini_footer .all_brend .close_block a {
+        border: 2px solid #002d2d;
+        width: 100%;
+        margin-bottom: 0px;
+        display: block;
+        background: #bfdfea;
+        text-align: center;
+        float: left;
+        min-height: 51px;
+        box-sizing: border-box;
+        font-size: 18px;
+        color: #003c95;
+        font: 14px/51px Verdana;
+        font-weight: normal;
+        font-weight: bold;
+        text-decoration: underline; }
   .mini_footer_brends {
     float: left;
     width: 100%;
@@ -8038,18 +8235,7 @@ table {
     width: 100%;
     margin-top: 10px;
     background: #f2f2f2; }
-    .mini_footer_actions_zag {
-      float: left;
-      width: 100%;
-      font: 15px/36px Verdana;
-      font-weight: bold;
-      background: #840000;
-      border: 3px solid #000000;
-      color: #ffffff;
-      box-sizing: border-box;
-      text-align: center;
-      margin-bottom: 31px; }
-    .mini_footer_actions a {
+    .mini_footer_actions .link {
       width: 43%;
       float: left;
       text-align: center;
@@ -8059,8 +8245,25 @@ table {
       border: 1px solid #014366;
       text-decoration: underline;
       background: #ffffff; }
-      .mini_footer_actions a:nth-child(even) {
+      .mini_footer_actions .link:hover {
+        color: #620909;
+        border-color: #620909; }
+      .mini_footer_actions .link:nth-child(even) {
         float: right; }
+    .mini_footer_actions_zag {
+      float: left;
+      width: 100% !important;
+      font: 15px/36px Verdana;
+      font-weight: bold;
+      background: #840000;
+      border: 3px solid #000000;
+      color: #ffffff;
+      box-sizing: border-box;
+      text-align: center;
+      margin-bottom: 31px; }
+      .mini_footer_actions_zag:hover {
+        border-color: #003c95;
+        color: #000000; }
     .mini_footer_actions .answer {
       width: 100%;
       margin-top: 29px; }
@@ -8076,7 +8279,8 @@ table {
         color: #014366;
         border: 1px solid #ff0000;
         text-decoration: underline;
-        background: #ffffff; }
+        background: #ffffff;
+        min-height: 81px; }
         .mini_footer_actions_prise .payment p {
           width: 100%;
           margin: 18.5px 0px;
@@ -8088,6 +8292,8 @@ table {
       border: 1px solid #024753;
       padding: 0px 6px;
       box-sizing: border-box; }
+      .mini_footer_actions .bascet:hover {
+        outline: 2px solid #620909; }
       .mini_footer_actions .bascet h5 {
         float: left;
         width: 100%;
@@ -8142,6 +8348,8 @@ table {
       color: #ffffff;
       font-weight: bold;
       text-decoration: underline; }
+      .mini_footer .black_link a:hover {
+        color: #003c95; }
       .mini_footer .black_link a:nth-child(even) {
         float: right; }
 
@@ -8299,8 +8507,7 @@ header {
         background-image: url("../img/sprite_section.png");
         background-position: -84px -170px; }
   .section_crumbs_rez {
-    float: left;
-    width: 19.57%; }
+    float: left; }
     @media (max-width: 1099px) {
       .section_crumbs_rez {
         display: none; }
@@ -8327,7 +8534,8 @@ header {
       font-weight: bold;
       text-decoration: underline;
       color: #5d7489;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      margin-right: 3px; }
       .section_crumbs_rez a:hover {
         color: #003b98; }
       @media (max-width: 1099px) {
