--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -17,7 +17,7 @@
   background: url("../img/footer_fon.jpg") center top no-repeat;
   background-size: cover;
   padding-top: 23px;
-  @media(max-width: 770px){
+  @media(max-width: 770px) {
     display: none;
   }
   .content {
@@ -161,13 +161,13 @@
           background: #FFFFFF;
           padding-left: 10px;
         }
-        &_name_line{
+        &_name_line {
           width: 100%;
           text-align: center;
           background: #ffffff;
           font: 13px/15px Verdana;
           color: #2a2a2a;
-          span{
+          span {
             display: inline-block;
             width: 52px;
           }
@@ -252,12 +252,12 @@
                 font-weight: normal;
               }
             }
-            .whatsapp{
+            .whatsapp {
               width: 100%;
               margin-top: 20px;
-              .zag{
+              .zag {
                 width: 100%;
-                i{
+                i {
                   float: left;
                   width: 35px;
                   height: 39px;
@@ -265,17 +265,17 @@
                   background-position: 0px -34px;
                   margin-left: 6px;
                 }
-                p{
+                p {
                   font: 13px/20px Verdana;
                   margin-bottom: 0px;
-                  span{
+                  span {
                     display: block;
                     color: #6b6b6b;
                     font-size: 9px;
 
                   }
                 }
-                a{
+                a {
                   width: 100%;
                   font: 11px/17px Verdana;
                   font-weight: normal;
@@ -414,6 +414,21 @@
                 left: -20px;
                 top: 50%;
                 margin-top: -10px;
+              }
+              @media(max-width: 1128px) {
+                top: 40px;
+                left: 0px;
+                z-index: 99;
+                &:before {
+                  content: '';
+                  position: absolute;
+                  border-left: 10px solid transparent;
+                  border-right: 10px solid transparent;
+                  border-bottom: 10px solid #fc0000;
+                  left: 20px;
+                  top: -10px;
+                }
+
               }
             }
           }
