--- a/sass/schem.scss
+++ b/sass/schem.scss
@@ -153,6 +153,11 @@
     background: #FFFFFF;
     text-align: center;
     z-index: 999;
+    @media(max-width: 1083px){
+      top:10px;
+      right: 10px;
+      border: 1px solid #620909;
+    }
     i {
       display: inline-block;
       width: 15px;
