--- a/sass/style.scss
+++ b/sass/style.scss
@@ -216,7 +216,6 @@ header {
     }
     &_rez {
       float: left;
-      width: 19.57%;
       @media(max-width: 1099px) {
         display: none;
 
@@ -248,6 +247,7 @@ header {
         text-decoration: underline;
         color: #5d7489;
         text-transform: uppercase;
+        margin-right: 3px;
         &:hover{
           color: #003b98;
         }
