--- a/css/style.css
+++ b/css/style.css
@@ -496,6 +496,9 @@ table {
           @media (max-width: 770px) {
             .header .header_kontakt_line .ring_wrap_block {
               left: 0px; } }
+          @media (max-width: 388px) {
+            .header .header_kontakt_line .ring_wrap_block {
+              left: -51.5px; } }
           .header .header_kontakt_line .ring_wrap_block_sity {
             float: left;
             width: 50%; }
@@ -920,6 +923,10 @@ table {
             .header__user_info_info_serch_lupa {
               right: 25%;
               top: 2px; } }
+          @media (max-width: 1024px) {
+            .header__user_info_info_serch_lupa {
+              right: 21%;
+              top: 4x; } }
       .header__user_info_info_check {
         font: 14px/40px Verdana;
         color: #024753;
@@ -1429,7 +1436,8 @@ table {
   background: #ffffff;
   z-index: 99;
   left: 0px;
-  top: 40px; }
+  top: 40px;
+  display: none; }
   .garant_block_header {
     float: left;
     width: 100%;
@@ -1442,11 +1450,14 @@ table {
       float: left;
       width: 110px;
       height: 135px;
-      background-image: url("../img/temp_sprite/garant_icon.png");
-      background-position: center;
+      background-image: url("../img/sprite_section.png");
+      background-position: 0px -257px;
       margin-left: 27.5px;
       margin-top: -30px;
       margin-right: 22.8px; }
+      @media (max-width: 1121px) {
+        .garant_block_header .icon {
+          display: none; } }
     .garant_block_header h3 {
       float: left;
       font: 26px/103px 'Roboto-Medium'; }
@@ -1577,6 +1588,10 @@ table {
   box-sizing: border-box;
   display: none;
   z-index: 99; }
+  @media (max-width: 554px) {
+    .logo_modal {
+      left: -20%;
+      top: 100%; } }
   .logo_modal_logo_block {
     float: left;
     margin-right: 13px; }
