--- a/sass/black_panel.scss
+++ b/sass/black_panel.scss
@@ -106,6 +106,7 @@
     float: left;
     width: 100%;
     &_zag {
+      float: left;
       width: 100%;
       font: 15px/16px Verdana;
       font-weight: bold;
