--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -10,6 +10,274 @@
   -webkit-transition: $s;
   -o-transition: $s;
 }
+.price_wrap{
+  width: 100%;
+  max-width: 1170px;
+  min-height: 543px;
+  background: #ffffff;
+  position: absolute;
+  padding: 0px 30px;
+  box-sizing: border-box;
+  left: 0px;
+  top: 0px;
+  z-index: 99;
+  .close {
+    display: block;
+    position: absolute;
+    top: -16.5px;
+    right: -16.5px;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50%;
+    background: #FFFFFF;
+    text-align: center;
+    @media(max-width: 1170px){
+      right: 10px;
+      top: 10px;
+      border: 1px solid #620909;
+    }
+    i {
+      display: inline-block;
+      width: 15px;
+      height: 15px;
+      margin-top: 9px;
+      background-image: url("../img/sprite_section.png");
+      background-position: -85px -192px;
+    }
+  }
+  &_header{
+    width: 100%;
+    height: 119px;
+    margin-top: 21px;
+    .block{
+      width: 50%;
+      .link_block{
+        height: 100%;
+        .icon_block{
+          display: inline-block;
+          width: 119px;
+          height: 119px;
+          @include radius(50%);
+          border: 1px solid #e5e5e5;
+          box-sizing: border-box;
+          text-align: center;
+          background: #ffffff;
+        }
+        a{
+          font: 20px/57px 'robotobold';
+          color: #024753;
+          border: 1px solid #e5e5e5;
+          margin-top:30px;
+          display: block;
+
+          span{
+            background: url("../img/dotted.png") left bottom repeat-x;
+            width: auto;
+            height: auto;
+            @include radius(0px)
+          }
+        }
+      }
+    }
+    .left{
+      float: left;
+      .link_block{
+        float: left;
+        .icon_block{
+          float: left;
+          .icon{
+            display: inline-block;
+            width: 77px;
+            height: 76px;
+            margin-top: 21.5px;
+            background-image: url("../img/temp_sprite/dog.png");
+            background-position: center;
+          }
+        }
+        a{
+          float: left;
+          text-align: right;
+          padding-right: 17px;
+          border-left: 0px;
+          padding-left: 20px;
+          margin-left: -7px;
+        }
+      }
+
+    }
+    .right{
+      float: right;
+      .link_block{
+        float: right;
+        .icon_block{
+          float: right;
+          .icon{
+            display: inline-block;
+            width: 90px;
+            height: 75px;
+            margin-top: 22px;
+            background-image: url("../img/temp_sprite/print.png");
+            background-position: center;
+          }
+        }
+        a{
+          float: right;
+          text-align: left;
+          padding-right: 20px;
+          border-right: 0px;
+          padding-right: 20px;
+          margin-right: -7px;
+        }
+      }
+    }
+  }
+  &_section{
+    width: 100%;
+    margin-top: 19px;
+    h3{
+      width: 100%;
+      padding: 0px 25px;
+      border: 1px solid #d8e4e5;
+      font: 16px/41px 'robotobold';
+      box-sizing: border-box;
+    }
+    .line_wrap{
+      width: 100%;
+      height: 322px;
+      overflow: hidden;
+    }
+    .job_block{
+      width: 100%;
+      position: relative;
+      float: left;
+      .help {
+        position: absolute;
+        padding: 15px 22px;
+        font:14px/20px 'Roboto-Medium';
+        background: #FFFFFF;
+        border: 1px solid #ff0000;
+        @include radius(5px);
+        width: 110%;
+        left:-5%;
+        display: none;
+        z-index: 999;
+        box-sizing: border-box;
+        .arow_help{
+          position: absolute;
+          z-index: 99;
+          width: 30px;
+          height: 14px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -46px -170px;
+          top: -14px;
+          left:29px;
+        }
+
+      }
+      .top_help{
+        position: absolute;
+        padding: 15px 22px;
+        font:14px/20px 'Roboto-Medium';
+        background: #FFFFFF;
+        border: 1px solid #ff0000;
+        @include radius(5px);
+        width: 110%;
+        left:-5%;
+        display: none;
+        z-index: 999;
+        box-sizing: border-box;
+        .arow_help{
+          bottom: -14px;
+          left:32px;
+          position: absolute;
+          z-index: 99;
+          width: 30px;
+          height: 14px;
+          background-image: url("../img/sprite_section.png");
+          background-position: -346px -103px;
+        }
+      }
+      &_line{
+        width: 100%;
+        float: left;
+        height: 46px;
+        &:nth-child(odd){
+          background: #f9f9f9;
+        }
+        .name{
+          float: left;
+          width: 66.81%;
+          text-align: left;
+          .question{
+            display: inline-block;
+            width: 13px;
+            height: 13px;
+            border: 1px solid #e7e7e7;
+            @include radius(50%);
+            font: 11px/12px Verdana;
+            margin-top: 16.5px;
+            color: #003c95;
+            text-align: center;
+            box-sizing: border-box;
+            margin-left: 14px;
+            margin-right: 12px;
+          }
+          p{
+            display: inline-block;
+            font: 14px/46px 'Roboto-Medium';
+            color: #2e2e2e;
+            span{
+              display: block;
+            }
+
+          }
+        }
+        .price{
+          float: right;
+          width: 33.19%;
+          p{
+            font: 16px/46px 'robotoBlack';
+            color: #b41600;
+            span{
+              font-size: 13px;
+              font-family: 'Georgia-BoldItalic';
+              color: #662211;
+              margin-left: 5px;
+            }
+          }
+        }
+      }
+      .big{
+        .name{
+          p{
+            line-height: 16px;
+            margin-top: 8px;
+          }
+        }
+      }
+    }
+    .job{
+      float: left;
+      width: 48.7%;
+      min-height: 383px;
+      border: 1px solid #d8e4e5;
+      border-bottom: 0px;
+      h3{
+        text-align: left;
+        background: #eaf4f5;
+      }
+    }
+    .materials{
+      float: right;
+      width: 48.7%;
+      height: 383px;
+      border: 1px solid #d8e4e5;
+      border-bottom: 0px;
+    }
+  }
+}
 .garant_block{
   position: absolute;
   width: 100%;
@@ -41,7 +309,7 @@
         display: none;
       }
     }
-    h3{
+    h4{
       float: left;
       font: 26px/103px 'Roboto-Medium';
       span{
@@ -97,17 +365,36 @@
       width: 71%;
       padding-left: 30px;
       box-sizing: border-box;
-      h2{
+      .zag_block{
         width: 100%;
-        font: 16px/41px Verdana;
+        font: 19px/41px Verdana;
         font-weight: bold;
         color: #074e23;
         text-shadow: -1px 3px 5px rgba(75, 75, 75, 0.52);
         text-align: center;
+        background: none;
 
       }
+      .pod_zag{
+        float: left;
+        width: 98.8%;
+        padding: 15px;
+        text-align: center;
+        border: 1px solid #024753;
+        background: #f2f2f2;
+        font: 16px/18px Verdana;
+        font-weight: bold;
+        color: #1b1b1b;
+        box-sizing: border-box;
+        margin: 20px 0px 40px;
+        span{
+          color: #b80000;
+          font-weight: bold;
+        }
+      }
       h3{
-        width: 100%;
+        float: left;
+        width: 98.5%;
         text-align: center;
         border: 1px solid #024753;
         background: #f2f2f2;
@@ -123,6 +410,7 @@
 
       }
       p{
+        float: left;
         width: 100%;
         font: 14px/22px 'robotoregular';
         padding-right: 10px;
@@ -130,6 +418,9 @@
         span{
           color: #b80000;
           font-weight: bold;
+          font-family: 'Cassandra';
+          font-size: 20px;
+          margin-right: 5px;
         }
       }
     }
