--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,6 +39,34 @@ html, body {
   min-height: 100%;
   overflow: hidden;
   position: relative;
+  h1 {
+    float: left;
+    width: 100%;
+    font: 16px/40px Verdana;
+    font-weight: bold;
+    color: #074e23;
+    text-shadow: -1px 3px 5px rgba(75, 75, 75, 0.52);
+    text-align: center;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    @media(max-width: 538px) {
+      line-height: 20px;
+    }
+  }
+  h2 {
+    min-height: 49px;
+    background-color: #014366;
+    font: 16px/49px Verdana;
+    font-weight: bold;
+    color: #FFFFFF;
+    padding-left: 23px;
+    box-sizing: border-box;
+  }
+  h3{
+    border: 1px solid #014366;
+    background: #fafafa;
+    text-align: center;
+  }
 
   .slick-arrow {
     position: absolute;
